--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="container mx-auto px-6 flex justify-between items-center w-full">
 
       <!-- Logo -->
-        <div class="flex items-center space-x-2">
-            <img src="./images/Anamika-Logo.png" alt="Logo" class="h-12 w-auto" />
+        <div class="flex items-center gap-2">
+            <img src="./images/Logo.png" alt="Logo" class="h-8 w-auto" />
         </div>
 
       <!-- Center: Navigation Links -->
@@ -38,7 +38,7 @@
         </ul>
 
       <!-- Search and Dark mode -->
-        <div class="flex items-center gap-4">
+        <div class="flex items-center gap-3 sm:gap-4">
         <!-- Dark mode icon -->
             <button onclick="toggleTheme()">
                 <img src="./images/dark.png" alt="Dark" class="w-6 block dark:hidden" />
@@ -46,7 +46,7 @@
             </button>
 
             <!-- Search box -->
-            <div class="relative w-45 min-w-[150px]">
+            <div class="relative w-28 sm:w-40">
                 <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                 <img src="./images/search.jpg" alt="Search" class="w-4 h-4" />
                 </div>
@@ -96,7 +96,7 @@
 <div class="px-[1%] py-10 bg-cover scroll-mt-20" id="about">
     <h2 class="text-center text-3xl md:text-3xl lg:text-4xl xl:text-5xl font-serif">About me</h2>
     <div class="max-w-5xl mx-auto mt-7">
-        <p class="text-sm text-center md:text-lg lg:text-xl leading-relaxed text-center font-sans">I'm Anamika Choudhary, a final-year B.Tech student in Materials Science and Metallurgical Engineering at IIT Jodhpur, blending core engineering expertise with a deep interest in data science and financial analytics. I’m passionate about applying technology to solve real-world problems—particularly at the intersection of AI, economics, and finance. Whether it's through machine learning, data analytics, or experimental innovation, I aim to keep learning, building, and creating meaningful impact.<a href="./About.html" class="text-gray-500 italic text-base"> more...</a></p>
+        <p class="text-sm md:text-lg lg:text-xl leading-relaxed text-center font-sans">I'm Anamika Choudhary, a final-year B.Tech student in Materials Science and Metallurgical Engineering at IIT Jodhpur, blending core engineering expertise with a deep interest in data science and financial analytics. I’m passionate about applying technology to solve real-world problems—particularly at the intersection of AI, economics, and finance. Whether it's through machine learning, data analytics, or experimental innovation, I aim to keep learning, building, and creating meaningful impact.<a href="./About.html" class="text-gray-500 italic text-base"> more...</a></p>
     </div>
 
 
@@ -105,18 +105,18 @@
         <h4 class="text-center text-2xl">Skills</h4>
         <hr class="border-t-2 border-gray-400 my-2 w-15/16 mx-auto" />
 
-        <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-5xl">
-            <li class="border-[0.5px] border-gray-400 bg-white dark:text-black rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black">
+        <ul class="grid grid-cols-3 gap-2 sm:gap-6 max-w-5xl">
+            <li class="flex flex-col border-[0.5px] border-gray-400 bg-white dark:text-black rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black">
                 <img src="./images/languages1.png" alt="" class="w-8 mt-2">
                 <h3 class="my-2 font-semibold text-gray-700">Languages</h3>
                 <p>Python, C/C++, HTML, SQL</p>
             </li>
-            <li class="border-[0.5px] border-gray-400 bg-white dark:text-black rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black">
+            <li class="flex flex-col border-[0.5px] border-gray-400 bg-white dark:text-black rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black">
                 <img src="./images/tech.png" alt="" class="w-8 mt-2">
                 <h3 class="my-2 font-semibold text-gray-700">Technical Skills</h3>
                 <p>Machine Learning, DSA, NLP, Excel, Statistics</p>
             </li>
-            <li class="border-[0.5px] bg-white dark:text-black border-gray-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black">
+            <li class="flex flex-col border-[0.5px] bg-white dark:text-black border-gray-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black">
                 <img src="./images/tools.jpg" alt="" class="w-8 mt-2">
                 <h3 class="my-2 font-semibold text-gray-700">Tools & Systems</h3>
                 <p>Pandas, NumPy, OpenCV, matplotlib, VS code, PowerBI</p>
