--- a/Contact.html
+++ b/Contact.html
@@ -47,7 +47,7 @@
             </button>
 
             <!-- Search box -->
-            <div class="relative w-28 sm:w-40">
+            <!--<div class="relative w-28 sm:w-40">
                 <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                 <img src="./images/search.jpg" alt="Search" class="w-4 h-4" />
                 </div>
@@ -57,7 +57,7 @@
                 placeholder="Search..."
                 class="w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400"
                 />
-            </div>
+            </div>-->
 
             <button class="block md:hidden ml-3" onclick="openMenu()">
                 <img src="./images/menu.jpg" alt="" class="w-6">
@@ -91,12 +91,6 @@
                     anamika20073@gmail.com
                 </a>
                 </div>
-                <!--<div class="flex items-center">
-                    <span class="text-base md:text-lg font-medium text-gray-500 dark:text-gray-300">+91-8769784001</span>
-                    <a href="https://wa.me/918769784001" target="_blank" class="ml-2">
-                        <img src="./images/whatsapp.png" alt="WhatsApp" class="w-6 h-6 inline-block" />
-                    </a>
-                </div> -->
             </div>
         </div>
 
@@ -134,7 +128,7 @@
     <!--------Footer ---------->
     <footer class="relative w-full mt-10">
         <!-- Light mode footer background -->
-        <div class="absolute inset-x-0 bottom-0 h-20 bg-footer-bg bg-cover bg-center bg-fixed dark:hidden z-[-1]"></div>
+        <div class="absolute inset-x-0 bottom-0 w-full h-20 bg-white bg-opacity-30 dark:hidden z-[-1]" style="backdrop-filter: blur(3px);"></div>
         <!-- Dark mode footer background -->
         <div class="absolute inset-x-0 bottom-0 h-20 bg-footer-bg-dark bg-cover bg-center bg-fixed hidden dark:block z-[-1]"></div>
         <div class="text-center relative pt-4 pb-2">
