--- a/Projects.html
+++ b/Projects.html
@@ -142,7 +142,7 @@
                 <div class="flex-1 text-left">
                     <h2 class="font-semibold dark:text-fuchsia-300 text-xl md:text-2xl mb-2">ChatBot</h2>
                     <p class="text-gray-700 dark:text-gray-200 text-sm md:text-base">Developed an AI Chatbot for Financial Analysis, offering financial information through PDF document analysis and live stock market data. It uses the <b>llama3.2</b> model for language understanding via OllamaLLM, PyPDF2 for PDF processing, <b>FAISS</b> for document search, and integrates with <b>Finnhub API and yfinance</b> for real-time and historical stock data. Made a <b>streamlit</b> based UI for interactive user queries and visualization.</p>
-                    <a href="" class="inline-block mt-3 px-4 py-1 bg-gray-400 text-gray-800 rounded-2xl shadow text-sm hover:bg-gray-200 transition">GitHub Link</a>
+                    <a href="https://github.com/anu273/Financial_Chatbot" class="inline-block mt-3 px-4 py-1 bg-gray-400 text-gray-800 rounded-2xl shadow text-sm hover:bg-gray-200 transition">GitHub Link</a>
                 </div>
             </div>
 
