--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
                 style="background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(3px)">
                     <div>
                         <h2 class="font-semibold dark:text-black">ChatBot</h2>
-                        <p class="text-xs md:text-sm text-gray-700">Designed an NLP pipeline to extract key entities from 15+ quarterly earnings call transcripts, enhancing information retrieval and analysis.</p>
+                        <p class="text-xs md:text-sm text-gray-700">Designed an NLP pipeline to extract key entities from 15+ quarterly earnings call transcripts and stock data, enhancing information retrieval and analysis.</p>
                     </div>
                     
                     <div>
-                        <a href="https://docs.google.com/presentation/d/1lhW6gwTsNcxY-ocYdaVPMFwzb6ex2YXiIzBWy3vVRng/edit?slide=id.g31ef0b9000d_0_47#slide=id.g31ef0b9000d_0_47" target="_blank" class="min-w-[40px] min-h-[40px] w-10 h-10 rounded-full border border-black flex items-center justify-center shadow-[2px_2px_0_#000] hover:bg-gray-300 transition shrink-0">
+                        <a href="https://github.com/anu273/Financial_Chatbot" target="_blank" class="min-w-[40px] min-h-[40px] w-10 h-10 rounded-full border border-black flex items-center justify-center shadow-[2px_2px_0_#000] hover:bg-gray-300 transition shrink-0">
                             <img src="./images/send.png" alt="Send Icon" class="w-3">
                         </a>
                     </div>
