--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     <!------- Header Section------->
     <div class="w-11/12 max-w-3xl mx-auto h-screen flex flex-col items-center justify-center gap-4 text-center">
         <img src="./images/profile.jpg" alt="Anamika's profile" class="w-60 h-60 rounded-full object-cover border-4 border-gray-700 shadow-md" />
-        <h3 class="flex items-center justify-center gap-1 text-xl md:text-2xl mb-2">
+        <h3 class="flex items-center justify-center gap-1 text-xl md:text-2xl lg:text-3xl mb-2">
             Hi! I'm Anamika Choudhary <img src="./images/hand.png" alt="Waving hand" class="w-10 initial-block"/>
         </h3>
-        <p class="max-w-2xl mx-auto">A graduate from the Indian Institute of Technology (IIT) Jodhpur, with a degree in Metallurgical and Materials Engineering.</p>
+        <p class="max-w-3xl mx-auto">"Alumna at the Indian Institute of Technology (IIT) Jodhpur, with a degree in Metallurgical and Materials Engineering."</p>
 
         <div class="flex flex-col sm:flex-row items-center mt-4">
             <a href="./Resume/Anamika_B.Tech_Resume.pdf" download target="_blank"
@@ -141,7 +141,7 @@
     <div class="px-[1%] py-10 bg-cover scroll-mt-14" id="about">
         <h2 class="text-center text-3xl md:text-3xl lg:text-4xl xl:text-5xl font-serif">About me</h2>
         <div class="max-w-5xl mx-auto mt-7">
-            <p class="text-sm md:text-lg lg:text-xl leading-relaxed text-center font-sans">I'm Anamika Choudhary, a final-year B.Tech student in Materials Science and Metallurgical Engineering at IIT Jodhpur, blending core engineering expertise with a deep interest in data science and financial analytics. I’m passionate about applying technology to solve real-world problems—particularly at the intersection of AI, economics, and finance. Whether it's through machine learning, data analytics, or experimental innovation, I aim to keep learning, building, and creating meaningful impact.<a href="./About.html" class="text-gray-500 italic text-base"> more...</a></p>
+            <p class="text-sm md:text-lg lg:text-xl leading-relaxed text-center font-sans">I'm Anamika Choudhary, a B.Tech graduate student in Materials Science and Metallurgical Engineering at IIT Jodhpur, blending core engineering expertise with a deep interest in data science and financial analytics. I’m passionate about applying technology to solve real-world problems—particularly at the intersection of AI, economics, and finance. Whether it's through machine learning, data analytics, or experimental innovation, I aim to keep learning, building, and creating meaningful impact.<a href="./About.html" class="text-gray-500 italic text-base"> more...</a></p>
         </div>
 
 
@@ -171,6 +171,36 @@
         </div>
     </div>
 
+    <!--------- Certificates Section -------->
+    <section class="max-w-5xl mx-auto mt-20 mb-20">
+        <h4 class="text-center text-3xl font-serif font-semibold mb-2 tracking-tight">Certificates</h4>
+        <hr class="border-t-2 border-gray-400 my-2 w-2/3 mx-auto" />
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 mt-10">
+            <!-- Certificate Card 1 -->
+            <a href="./Certificates/MS Excel Certificate.pdf" target="_blank"
+               class="group rounded-2xl shadow-lg bg-white dark:bg-gradient-to-br dark:from-gray-900 dark:via-gray-800 dark:to-fuchsia-900 border border-gray-200 dark:border-gray-700 p-6 flex flex-col items-center transition-transform duration-500 hover:bg-lightHover hover:-translate-y-1 hover:shadow-black dark:hover:bg-inherit">
+                <h3 class="text-lg font-bold text-gray-800 dark:text-white mb-1 text-center">Microsoft Excel</h3>
+                <p class="text-sm text-gray-500 dark:text-gray-300 mb-2 text-center">SimpliLearn</p>
+                <span class="inline-block px-3 py-1 text-xs rounded-full bg-fuchsia-100 text-fuchsia-700 dark:bg-fuchsia-900 dark:text-fuchsia-200">View Certificate</span>
+            </a>
+            <!-- Certificate Card 2 -->
+            <a href="./Certificates/Deloitte-Data Analytics.pdf" target="_blank"
+               class="group rounded-2xl shadow-lg bg-white dark:bg-gradient-to-br dark:from-gray-900 dark:via-gray-800 dark:to-fuchsia-900 border border-gray-200 dark:border-gray-700 p-6 flex flex-col items-center transition-transform duration-500 hover:bg-lightHover hover:-translate-y-1 hover:shadow-black dark:hover:bg-inherit">
+                <h3 class="text-lg font-bold text-gray-800 dark:text-white mb-1 text-center">Data Analytics - Deloitte</h3>
+                <p class="text-sm text-gray-500 dark:text-gray-300 mb-2 text-center">Forage</p>
+                <span class="inline-block px-3 py-1 text-xs rounded-full bg-fuchsia-100 text-fuchsia-700 dark:bg-fuchsia-900 dark:text-fuchsia-200">View Certificate</span>
+            </a>
+            <!-- Certificate Card 3 -->
+            <a href="./Certificates/Data Visualisation.pdf" target="_blank"
+               class="group rounded-2xl shadow-lg bg-white dark:bg-gradient-to-br dark:from-gray-900 dark:via-gray-800 dark:to-fuchsia-900 border border-gray-200 dark:border-gray-700 p-6 flex flex-col items-center transition-transform duration-500 hover:bg-lightHover hover:-translate-y-1 hover:shadow-black dark:hover:bg-inherit">
+                <h3 class="text-lg font-bold text-gray-800 dark:text-white mb-1 text-center">Data Visualisation - Tata</h3>
+                <p class="text-sm text-gray-500 dark:text-gray-300 mb-2 text-center">Forage</p>
+                <span class="inline-block px-3 py-1 text-xs rounded-full bg-fuchsia-100 text-fuchsia-700 dark:bg-fuchsia-900 dark:text-fuchsia-200">View Certificate</span>
+            </a>
+        </div>
+        
+    </section>
+
     <!--------Projects -------->
     <div class="px-[12%] py-12 bg-cover scroll-mt-10" id="work">
         <h2 class="text-center text-3xl md:text-3xl lg:text-4xl xl:text-5xl font-serif">Projects</h2>
@@ -182,11 +212,11 @@
                 style="background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(3px)">
                     <div>
                         <h2 class="font-semibold dark:text-black">ChatBot</h2>
-                        <p class="text-xs md:text-sm text-gray-700">Designed an NLP pipeline to extract key entities from 15+ quarterly earnings call transcripts and stock data, enhancing information retrieval and analysis.</p>
+                        <p class="text-xs md:text-sm text-gray-700">Designed an NLP pipeline to extract key entities from 15+ quarterly earnings call transcripts, enhancing information retrieval and analysis.</p>
                     </div>
                     
                     <div>
-                        <a href="https://github.com/anu273/Financial_Chatbot" target="_blank" class="min-w-[40px] min-h-[40px] w-10 h-10 rounded-full border border-black flex items-center justify-center shadow-[2px_2px_0_#000] hover:bg-gray-300 transition shrink-0">
+                        <a href="https://docs.google.com/presentation/d/1lhW6gwTsNcxY-ocYdaVPMFwzb6ex2YXiIzBWy3vVRng/edit?slide=id.g31ef0b9000d_0_47#slide=id.g31ef0b9000d_0_47" target="_blank" class="min-w-[40px] min-h-[40px] w-10 h-10 rounded-full border border-black flex items-center justify-center shadow-[2px_2px_0_#000] hover:bg-gray-300 transition shrink-0">
                             <img src="./images/send.png" alt="Send Icon" class="w-3">
                         </a>
                     </div>
