--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <p class="max-w-3xl mx-auto">"Alumna at the Indian Institute of Technology (IIT) Jodhpur, with a degree in Metallurgical and Materials Engineering."</p>
 
         <div class="flex flex-col sm:flex-row items-center mt-4">
-            <a href="./Resume/Anamika_B.Tech_Resume.pdf" download target="_blank"
+            <a href="./Resume/AnamikaChoudhary_Resume_.pdf" download target="_blank"
             class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-gray-200 font-serif dark:text-black">My Resume <img src="./images/download.jpg" alt="" class="w-6"></a>
         </div>
     </div>
